--- a/nodedge/qss/nodedge_style.qss
+++ b/nodedge/qss/nodedge_style.qss
@@ -374,3 +374,22 @@ QToolTip {
     background: palette(light);
     color: palette(text);
 }
+
+QListWidget {
+    /*max-height: 10;*/
+    min-width: 10px;
+}
+
+GraphicsBlockContent QListWidget {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 0px;
+}
+
+GraphicsNodeTitleFrame {
+    background: palette(dark);
+}
+
+GraphicsNodeStatusLabel {
+    background: palette(dark);
+}
