Extract style in a dedicated class.

--- a/nodedge/qss/nodedge_style.qss
+++ b/nodedge/qss/nodedge_style.qss
@@ -298,7 +298,7 @@ padding-bottom: 2px;
 }
 
 GraphicsNodeTitleLabel:hover{
-background:palette(highlight);
+    background: palette(dark);
 }
 
 QMenu{
