[WIP] Dock widgets: Add Scene detail item widget.

--- a/nodedge/qss/nodedge_style.qss
+++ b/nodedge/qss/nodedge_style.qss
@@ -405,3 +405,8 @@ GraphicsNodeTitleFrame {
 GraphicsNodeStatusLabel {
     background: palette(dark);
 }
+
+GraphicsNodeTypeLabel {
+    background: palette(dark);
+    color: palette(light);
+}
