Integrate dats into homepage.

--- a/resources/qss/nodedge_style.qss
+++ b/resources/qss/nodedge_style.qss
@@ -457,6 +457,10 @@ HeaderButton {
     icon: url("resources/black_icons/home_page.png");
 }
 
+#datsButton {
+    icon: url("resources/black_icons/line_chart.png");
+}
+
 HeaderButton:hover{
     border-color:palette(highlight);
 }
