Improve header buttons and add front end signin feature.

--- a/resources/qss/nodedge_style_dark.qss
+++ b/resources/qss/nodedge_style_dark.qss
@@ -197,7 +197,6 @@ QPushButton{
 border: 1px solid palette(light);
 border-radius: 0;
 color: palette(dark);
-font-size: 12px;
 padding: 6px 16px;
 background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
 stop: 0.0 palette(light), stop: 0.3 palette(light),
@@ -410,14 +409,14 @@ GraphicsNodeTypeLabel {
     color: palette(light);
 }
 
-HeaderButton {
+HeaderIconButton, HeaderTextButton {
     background: palette(midLight);
     icon-background-color: palette(base);
     icon-size: 30px;
     text-align: center;
     border: 0px solid palette(text);
     border-radius: 4px;
-
+    color: palette(text);
 }
 
 #loginButton {
@@ -461,13 +460,13 @@ HeaderButton {
     icon: url("resources/white_icons/line_chart.png");
 }
 
-HeaderButton:hover{
+HeaderIconButton:hover{
     border-color:palette(highlight);
     background:palette(base);
 }
 
-HeaderButton:pressed,
-HeaderButton:pressed:focus{
+HeaderIconButton:pressed,
+HeaderIconButton:pressed:focus{
     color:palette(button-text);
     background:palette(highlight);
     border-color:palette(highlight);
