Fix minor issues after rebase.

--- a/resources/qss/nodedge_style.qss
+++ b/resources/qss/nodedge_style.qss
@@ -11,7 +11,6 @@ background:palette(dark);
 color:palette(window-text);
 }
 
-
 QTabWidget{
 border:0;
 }
@@ -198,7 +197,6 @@ QPushButton{
 border: 1px solid palette(light);
 border-radius: 0;
 color: palette(dark);
-font-size: 12px;
 padding: 6px 16px;
 background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
 stop: 0.0 palette(light), stop: 0.3 palette(light),
@@ -211,12 +209,14 @@ background:palette(window);
 border-color:palette(dark);
 }
 
-QPushButton:focus,
+/*QPushButton:focus,
 QPushButton:hover,
-QPushButton:hover:focus,
+QPushButton:hover:focus,*/
 QPushButton:pressed,
 QPushButton:pressed:focus{
-    background:palette(link-visited);
+    color:palette(button-text);
+    background:palette(highlight);
+    border-color:palette(dark);
 }
 
 QPushButton:default{
@@ -409,14 +409,14 @@ GraphicsNodeTypeLabel {
     color: palette(light);
 }
 
-HeaderButton {
-    background: palette(base);
+HeaderIconButton, HeaderTextButton {
+    background: palette(midLight);
     icon-background-color: palette(base);
     icon-size: 30px;
     text-align: center;
-    border: 1px solid palette(text);
+    border: 0px solid palette(text);
     border-radius: 4px;
-
+    color: palette(text);
 }
 
 #loginButton {
@@ -460,12 +460,14 @@ HeaderButton {
     icon: url("resources/black_icons/line_chart.png");
 }
 
-HeaderButton:hover{
+HeaderIconButton:hover{
     border-color:palette(highlight);
+        background:palette(base);
+
 }
 
-HeaderButton:pressed,
-HeaderButton:pressed:focus{
+HeaderIconButton:pressed,
+HeaderIconButton:pressed:focus{
     color:palette(button-text);
     background:palette(highlight);
     border-color:palette(highlight);
